--- a/creative-cv_free_1-1-0/index.html
+++ b/creative-cv_free_1-1-0/index.html
@@ -177,11 +177,11 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/HamaBarhamou/alx-system_engineering-devops">
                   <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
-                      <p>Web Development</p>
+                      <div class="h4">ALX-system_engineering-devops</div>
+                      <p> Peer learning day</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
