travail sur mon experirence

--- a/creative-cv_free_1-1-0/index.html
+++ b/creative-cv_free_1-1-0/index.html
@@ -338,7 +338,23 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>2020 - Today</p>
+            <p>2022- to Day</p>
+            <div class="h5">TECHNICAL SALES REPRESENTATIVE</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Intern</div>
+            <p>preparation of responses to calls for tenders</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>2020 - 2022</p>
             <div class="h5">OSINT</div>
           </div>
         </div>
@@ -367,22 +383,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>2018-2020</p>
-            <div class="h5">Teaching</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Intern</div>
-            <p>Teacher of mathematics in high schools and colleges, then teacher of algorithms and programming in institutes.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+    
   </div>
 </div>
 <div class="section">
@@ -399,9 +400,9 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Peer learning</div>
-            <p class="category">Holberton School</p>
-            <p> Student in software engineering from holberton school 
-              <a href="https://www.holbertonschool.com/">(https://www.holbertonschool.com/ )</a>. Work in progress "ALX..." on <a href="https://github.com/HamaBarhamou">https://github.com/HamaBarhamou</a></p>
+            <p class="category">Student at ALX/Holberton School SE Program </p>
+            <p> The ALX Holberton Software Engineering programme is a 12-month(70h/week) immersive programme that engages technology enthusiasts and budding software engineers in a variety of programmes across in-demand tech disciplines to prepare them for a global career as a Full-Stack Developer.
+              <a href="https://www.holbertonschool.com/">(https://www.holbertonschool.com/ )</a>. </br>>Work in progress "ALX..." on <a href="https://github.com/HamaBarhamou">https://github.com/HamaBarhamou</a></p>
           </div>
         </div>
       </div>
@@ -410,15 +411,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2009 - 2013</p>
+            <p>2016 - 2017</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Computer Science</div>
+            <div class="h5">Bachelor's Degree of Science in Mathematics and Computer Science</div>
             <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>Theoretical computer science at the Department of Mathematics and Computer Science of the Abdou Moumouni University of Niger/Niamey.</p>
           </div>
         </div>
       </div>
@@ -427,15 +428,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2007 - 2009</p>
+            <p>2010 - 2011</p>
             <div class="h5">High School</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Science and Mathematics</div>
-            <p class="category">School of Secondary board</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">BAC series C</div>
+            <p class="category">Municipal High School of Sikensi (Ivory Coast)</p>
+            <p>To be studied in the final year of high school in Sikensi, Ivory Coast.</p>
           </div>
         </div>
       </div>
