--- a/creative-cv_free_1-1-0/index.html
+++ b/creative-cv_free_1-1-0/index.html
@@ -26,6 +26,9 @@
           <div class="container">
             <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">CV of Barhamou</a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
+             
+              <div id="nb_visiteur"> nb </div>
+
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
@@ -40,6 +43,8 @@
         </nav>
       </div>
     </header>
+
+
     <div class="page-content">
       <div>
 <div class="profile-page">
@@ -141,7 +146,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">C/C++</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">C</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
               </div>
@@ -468,8 +473,8 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
-                <div class="h5 pt-2">Braiden</div>
-                <p class="category">CEO / Creativem</p>
+                <div class="h5 pt-2">Moustapha SALAM Soulé</div>
+                <p class="category">CEO / Amiya Business</p>
               </div>
               <div class="col-lg-10 col-md-9">
                 <p> Habitasse venenatis commodo tempors eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
@@ -573,5 +578,11 @@
     <script src="js/now-ui-kit.js?ver=1.1.0"></script>
     <script src="js/aos.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <!-- Charge notre composant React -->
+    <script src="js/nbVisiteurs.js"></script>
   </body>
 </html>
